# public/_openapi.json
@@ -31,7 +31,9 @@
   "paths": {
     "/projects": {
       "get": {
-        "tags": ["Projects"],
+        "tags": [
+          "Projects"
+        ],
         "summary": "Get a list of projects",
         "parameters": [
           {
@@ -78,7 +80,10 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": ["asc", "desc"]
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           }
         ],
@@ -122,7 +127,10 @@
                                 "description": "The date and time the project was created"
                               }
                             },
-                            "required": ["title", "chat_id"]
+                            "required": [
+                              "title",
+                              "chat_id"
+                            ]
                           }
                         ],
                         "required": [
@@ -153,7 +161,9 @@
         }
       },
       "post": {
-        "tags": ["Projects"],
+        "tags": [
+          "Projects"
+        ],
         "summary": "Create a new project",
         "requestBody": {
           "required": true,
@@ -171,7 +181,9 @@
                     "description": "The project description"
                   }
                 },
-                "required": ["title"]
+                "required": [
+                  "title"
+                ]
               }
             }
           }
@@ -271,7 +283,9 @@
     },
     "/projects/{id}": {
       "get": {
-        "tags": ["Projects"],
+        "tags": [
+          "Projects"
+        ],
         "summary": "Get a project by ID",
         "parameters": [
           {
@@ -338,7 +352,10 @@
                                   "description": "The date and time the project was created"
                                 }
                               },
-                              "required": ["title", "chat_id"]
+                              "required": [
+                                "title",
+                                "chat_id"
+                              ]
                             },
                             {
                               "type": "object",
@@ -586,7 +603,9 @@
         }
       },
       "delete": {
-        "tags": ["Projects"],
+        "tags": [
+          "Projects"
+        ],
         "summary": "Delete project by ID",
         "parameters": [
           {
@@ -651,7 +670,9 @@
         }
       },
       "put": {
-        "tags": ["Projects"],
+        "tags": [
+          "Projects"
+        ],
         "summary": "Update project by ID",
         "parameters": [
           {
@@ -779,7 +800,9 @@
     },
     "/epics": {
       "get": {
-        "tags": ["Epics"],
+        "tags": [
+          "Epics"
+        ],
         "summary": "Get a list of epics",
         "parameters": [
           {
@@ -826,7 +849,10 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": ["asc", "desc"]
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           }
         ],
@@ -862,7 +888,9 @@
         }
       },
       "post": {
-        "tags": ["Epics"],
+        "tags": [
+          "Epics"
+        ],
         "summary": "Create a new epic",
         "requestBody": {
           "required": true,
@@ -884,7 +912,10 @@
                     "type": "number"
                   }
                 },
-                "required": ["title", "project_id"]
+                "required": [
+                  "title",
+                  "project_id"
+                ]
               }
             }
           }
@@ -982,7 +1013,9 @@
     },
     "/epics/{id}": {
       "get": {
-        "tags": ["Epics"],
+        "tags": [
+          "Epics"
+        ],
         "summary": "Get an epic by ID",
         "parameters": [
           {
@@ -1086,7 +1119,9 @@
         }
       },
       "delete": {
-        "tags": ["Epics"],
+        "tags": [
+          "Epics"
+        ],
         "summary": "Delete an epic by ID",
         "parameters": [
           {
@@ -1151,7 +1186,9 @@
         }
       },
       "put": {
-        "tags": ["Epics"],
+        "tags": [
+          "Epics"
+        ],
         "summary": "Update epic by id",
         "parameters": [
           {
@@ -1277,7 +1314,9 @@
     },
     "/stories": {
       "get": {
-        "tags": ["Stories"],
+        "tags": [
+          "Stories"
+        ],
         "summary": "Get a list of stories",
         "parameters": [
           {
@@ -1324,7 +1363,10 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": ["asc", "desc"]
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           }
         ],
@@ -1361,7 +1403,9 @@
         }
       },
       "post": {
-        "tags": ["Stories"],
+        "tags": [
+          "Stories"
+        ],
         "summary": "Create a new story",
         "requestBody": {
           "required": true,
@@ -1383,7 +1427,9 @@
                     "type": "number"
                   }
                 },
-                "required": ["title"]
+                "required": [
+                  "title"
+                ]
               }
             }
           }
@@ -1481,7 +1527,9 @@
     },
     "/stories/{id}": {
       "get": {
-        "tags": ["Stories"],
+        "tags": [
+          "Stories"
+        ],
         "summary": "Get an story by ID",
         "parameters": [
           {
@@ -1582,7 +1630,9 @@
         }
       },
       "delete": {
-        "tags": ["Stories"],
+        "tags": [
+          "Stories"
+        ],
         "summary": "Delete story by ID",
         "parameters": [
           {
@@ -1644,7 +1694,9 @@
         }
       },
       "put": {
-        "tags": ["Stories"],
+        "tags": [
+          "Stories"
+        ],
         "summary": "Update story",
         "parameters": [
           {
@@ -1770,7 +1822,9 @@
     },
     "/tasks": {
       "get": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Get a list of tasks",
         "parameters": [
           {
@@ -1835,7 +1889,10 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": ["asc", "desc"]
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           }
         ],
@@ -1872,7 +1929,9 @@
         }
       },
       "post": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Create a new task",
         "requestBody": {
           "required": true,
@@ -1906,7 +1965,10 @@
                     "description": "The status of the task"
                   }
                 },
-                "required": ["title", "status"]
+                "required": [
+                  "title",
+                  "status"
+                ]
               }
             }
           }
@@ -1980,7 +2042,9 @@
     },
     "/tasks/{id}": {
       "get": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Get a task by ID",
         "parameters": [
           {
@@ -2082,7 +2146,9 @@
         }
       },
       "delete": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Delete a task by ID",
         "parameters": [
           {
@@ -2143,7 +2209,9 @@
         }
       },
       "put": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Update task by ID",
         "parameters": [
           {
@@ -2258,7 +2326,9 @@
     },
     "/taskwatchers": {
       "post": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Add a task watcher",
         "requestBody": {
           "required": true,
@@ -2276,7 +2346,10 @@
                     "type": "number"
                   }
                 },
-                "required": ["task_id", "userId"]
+                "required": [
+                  "task_id",
+                  "userId"
+                ]
               }
             }
           }
@@ -2329,7 +2402,9 @@
         }
       },
       "delete": {
-        "tags": ["Tasks"],
+        "tags": [
+          "Tasks"
+        ],
         "summary": "Remove a task watcher",
         "parameters": [
           {
@@ -2401,7 +2476,9 @@
     },
     "/login": {
       "post": {
-        "tags": ["login"],
+        "tags": [
+          "auth"
+        ],
         "summary": "Login user with miniapp data",
         "requestBody": {
           "required": true,
@@ -2414,7 +2491,9 @@
                     "type": "string"
                   }
                 },
-                "required": ["params"]
+                "required": [
+                  "params"
+                ]
               }
             }
           }
@@ -2491,7 +2570,11 @@
                               "type": "number"
                             }
                           },
-                          "required": ["token", "user", "chat_id"]
+                          "required": [
+                            "token",
+                            "user",
+                            "chat_id"
+                          ]
                         }
                       }
                     }
@@ -2525,9 +2608,48 @@
         }
       }
     },
+    "/logout": {
+      "delete": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "Logout user",
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "User loged out",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "type": "object",
+                      "properties": {
+                        "statusCode": {
+                          "type": "number"
+                        },
+                        "statusMessage": {
+                          "type": "string"
+                        },
+                        "message": {
+                          "type": "string",
+                          "nullable": true
+                        }
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Get a list of users in current chat",
         "parameters": [],
         "responses": {
@@ -2592,7 +2714,10 @@
       },
       "SortDirection": {
         "type": "string",
-        "enum": ["asc", "desc"]
+        "enum": [
+          "asc",
+          "desc"
+        ]
       },
       "GenericResponse": {
         "type": "object",
@@ -2652,7 +2777,10 @@
               "description": "The direction to sort by",
               "default": "asc",
               "type": "string",
-              "enum": ["asc", "desc"]
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           }
         }
@@ -2685,7 +2813,10 @@
             "description": "The date and time the project was created"
           }
         },
-        "required": ["title", "chat_id"]
+        "required": [
+          "title",
+          "chat_id"
+        ]
       },
       "Epic": {
         "type": "object",
@@ -2721,7 +2852,13 @@
             "description": "The date and time when the epic was last updated"
           }
         },
-        "required": ["id", "title", "project_id", "created_at", "updated_at"]
+        "required": [
+          "id",
+          "title",
+          "project_id",
+          "created_at",
+          "updated_at"
+        ]
       },
       "Story": {
         "type": "object",
@@ -2757,7 +2894,13 @@
             "description": "The date and time when the story was last updated"
           }
         },
-        "required": ["id", "title", "owner_id", "created_at", "updated_at"]
+        "required": [
+          "id",
+          "title",
+          "owner_id",
+          "created_at",
+          "updated_at"
+        ]
       },
       "Task": {
         "type": "object",
@@ -2791,7 +2934,11 @@
             "description": "The status of the task"
           }
         },
-        "required": ["title", "project_id", "status"]
+        "required": [
+          "title",
+          "project_id",
+          "status"
+        ]
       },
       "User": {
         "type": "object",
@@ -2923,7 +3070,10 @@
                 "description": "The date and time the project was created"
               }
             },
-            "required": ["title", "chat_id"]
+            "required": [
+              "title",
+              "chat_id"
+            ]
           },
           {
             "type": "object",
@@ -3326,7 +3476,13 @@
                 "description": "The date and time when the story was last updated"
               }
             },
-            "required": ["id", "title", "owner_id", "created_at", "updated_at"]
+            "required": [
+              "id",
+              "title",
+              "owner_id",
+              "created_at",
+              "updated_at"
+            ]
           },
           {
             "type": "object",
@@ -3487,7 +3643,10 @@
           "description": "The direction to sort by",
           "default": "asc",
           "type": "string",
-          "enum": ["asc", "desc"]
+          "enum": [
+            "asc",
+            "desc"
+          ]
         }
       }
     }
