# types/api/logout/delete.ts
@@ -1,0 +1,4 @@
+import type { paths } from "@/types/api.types";
+
+export type LogoutDeleteResponse =
+  paths["/logout"]["delete"]["responses"]["200"]["content"]["application/json"];
